--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Vynth</title>
+    <title>Vyth</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
@@ -12,7 +12,7 @@
     <section class="navigation">
       <div class="nav-container">
         <div class="brand">
-          <a href="index.html">Vynth</a>
+          <a href="index.html">Vyth</a>
         </div>
         <nav>
           <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
