--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             
             </li>
             <li>
-              <a href="#!">More</a>
+              <a href="#!">Lore</a>
             </li>
             <li>
               <a href="#!">Characters</a>
@@ -67,15 +67,15 @@
             The Land of Vyth
           </span>
           <h4 class = "animate">
-          &mdash; your journey begins here &mdash;
+          &mdash; the journey begins here &mdash;
         </h4>
         </p>
         </div>
-        
+
     </div>
     <script src="" async defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="js/darkmode.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="js/navbar.js"></script>
   </body>
 </html>
