--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 	
         <div class="animate">
           <h4 class= "animate">
-            A tale of 4
+            Voyage
           </h4>
             <span>
               The Land of Vyth
             </span>
             <h4 class = "animate">
-            &mdash; the journey begins here &mdash;
+            &mdash; a tale of 4 &mdash;
           </h4>
           </p>
           </div>
