--- a/index.html
+++ b/index.html
@@ -89,9 +89,11 @@
         <div class="bird-container bird-container--four">
           <div class="bird bird--four"></div>
         </div>
-        
       </div>
       <!-- end animation -->
+      <div class="container">
+        <a href="loading.html">Start your quest</a>
+      </div>
     <script src="" async defer></script>
     <script src="js/darkmode.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
