--- a/roski.html
+++ b/roski.html
@@ -12,7 +12,7 @@
     <section class="navigation">
       <div class="nav-container">
         <div class="brand">
-          <a href="index.html">Vyth</a>
+          <a href="index.html">Dungeons & Dragons</a>
         </div>
         <nav>
           <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
